[package]
name = "ut3"
version = "0.1.0"
author = "Vivek Sarkar <vivek.sarkar@gmail.com>"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "=1.0.0-beta.3", features = ["deref", "deref_mut"] }
itertools = "0.11.0"
clap = {version = "^4.0", features = ["derive"]}
prost = "0.11.9"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.7.2"
