[package]
name = "ut3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "=1.0.0-beta.3", features = ["deref", "deref_mut"] }
itertools = "0.11.0"
clap = {version = "^4.0", features = ["derive"]}
bincode = "2.0.0-rc"
